--- a/OnlineCoachingApp.Web/Views/Home/Index.cshtml
+++ b/OnlineCoachingApp.Web/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="card-body">
                         <h5 class="card-title">@program.Name</h5>
                         <p class="card-content">@($"{@program.Price:0.00}€")</p>
-                        <button class="btn btn-dark add-to-cart">ADD TO CART</button>
+                        <button class="btn btn-outline-dark add-to-cart">ADD TO CART</button>
                     </div>
                 </li>
             }
