--- a/OnlineCoachingApp.Web/Views/_ViewImports.cshtml
+++ b/OnlineCoachingApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using OnlineCoachingApp.Web
 @using OnlineCoachingApp.Web.ViewModels.Home
+@using OnlineCoachingApp.Web.ViewModels.TrainingProgram
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
