--- a/OnlineCoachingApp.Web/wwwroot/css/carousel.css
+++ b/OnlineCoachingApp.Web/wwwroot/css/carousel.css
@@ -9,6 +9,7 @@
 .wrapper {
     max-width: 1100px;
     width: 100%;
+    height: 47vh;
     position: relative;
 }
 
@@ -41,10 +42,11 @@
         /*scroll-snap-type: x mandatory;*/
         scroll-behavior: smooth;
         scrollbar-width: none;
+        height: 100%;
     }
 
 .carousel {
-    padding: 16px;
+    padding: 20px;
 }
 
     .carousel::-webkit-scrollbar {
@@ -73,17 +75,17 @@
 
     .carousel .card {
         scroll-snap-align: start;
-        height: 100%;
         list-style: none;
         background: #fff;
         border-radius: 8px;
         display: flex;
         cursor: pointer;
-        padding-bottom: 15px;
+        /*padding-bottom: 15px;*/
         align-items: center;
-        justify-content: center;
+        /*justify-content: center;*/
         flex-direction: column;
         width: 100%;
+        height: 80%;
         max-width: 240px;
     }
 
@@ -92,17 +94,39 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        position: absolute;
+        bottom: -80px;
+        background-color: white;
+        width: 80%;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     }
+
+.card .img {
+    width: 100%;
+    height: 100%;
+}
 
 .card .img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-top-left-radius: 3%;
-    border-top-right-radius: 3%;
+    /*border-top-left-radius: 3%;*/
+    /*border-top-right-radius: 3%;*/
 }
 
-.card p {
+.card-title{
+    padding-top: 5px
+}
+
+.card-title::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: 5%;
+    background: #ffce00;
 }
 
 @media screen and (min-width: 1200px) {
