--- a/OnlineCoachingApp.Web/wwwroot/css/carousel.css
+++ b/OnlineCoachingApp.Web/wwwroot/css/carousel.css
@@ -99,6 +99,7 @@
         background-color: white;
         width: 80%;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+        z-index: 2; /* Ensure the button stays above the dark background */
     }
 
 .card .img {
@@ -115,7 +116,12 @@
 }
 
 .card-title{
-    padding-top: 5px
+    padding-top: 5px;
+}
+
+.card-content {
+    margin-top: 2px;
+    margin-bottom: 15px;
 }
 
 .card-title::before {
@@ -128,6 +134,56 @@
     height: 5%;
     background: #ffce00;
 }
+
+.view-details {
+    position: absolute;
+    bottom: 88px;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 206, 0, 0.8); /* Red background with some transparency */
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    opacity: 0;
+    transform: translateY(100%); /* Move the button out of view initially */
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    z-index: 2; /* Ensure the button stays above the dark background */
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0); /* Fully transparent initially */
+    transition: background-color 0.3s ease-in-out;
+    z-index: 1; /* Ensure it appears above the image */
+}
+
+.card:hover::before {
+    background-color: rgba(0, 0, 0, 0.2); /* Darkens the background with 50% opacity on hover */
+}
+
+.carousel .card:hover .view-details {
+    opacity: 1;
+    transform: translateY(0); /* Slide the button into view on hover */
+}
+
+.add-to-cart {
+    background-color: white;
+    height: 35px;
+    width: 100px;
+    margin-bottom: 4px;
+    font-size: medium;
+}
+
+    .add-to-cart:hover {
+        /*!TODO: Implement it!*/
+    }
 
 @media screen and (min-width: 1200px) {
     .wrapper .carousel {
