--- a/OnlineCoachingApp.Web/Views/TrainingProgram/Add.cshtml
+++ b/OnlineCoachingApp.Web/Views/TrainingProgram/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Add Training Program";
+    ViewData["Title"] = "Add";
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
