--- a/OnlineCoachingApp.Web/wwwroot/css/training-programs.css
+++ b/OnlineCoachingApp.Web/wwwroot/css/training-programs.css
@@ -79,6 +79,132 @@
         box-shadow: 0 4px 12px rgba(230, 184, 0, 0.3);
     }
 
+/**/
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 100%;
+    max-width: 1100px;
+    height: 100%;
+    min-height: 50vh;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+
+.card {
+    scroll-snap-align: start;
+    list-style: none;
+    background: #fff;
+    border-radius: 8px;
+    display: flex;
+    cursor: pointer;
+    /*padding-bottom: 15px;*/
+    align-items: center;
+    /*justify-content: center;*/
+    flex-direction: column;
+    width: 100%;
+    height: 80%;
+    max-width: 240px;
+}
+
+.card-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: -80px;
+    background-color: white;
+    width: 80%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+}
+
+.card .img {
+    width: 100%;
+    height: 100%;
+}
+
+    .card .img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        /*border-top-left-radius: 3%;*/
+        /*border-top-right-radius: 3%;*/
+    }
+
+.card-title {
+    padding-top: 5px;
+}
+
+.card-content {
+    margin-top: 2px;
+    margin-bottom: 15px;
+}
+
+.card-title::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: 5%;
+    background: #ffce00;
+}
+
+.view-details {
+    position: absolute;
+    bottom: 88px;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 206, 0, 0.8);
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    z-index: 2;
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    transition: background-color 0.3s ease-in-out;
+    z-index: 1;
+}
+
+.card:hover::before {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.card:hover .view-details {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.add-to-cart {
+    background-color: white;
+    height: 35px;
+    width: 100px;
+    margin-bottom: 4px;
+    font-size: medium;
+}
+
+    .add-to-cart:hover {
+        /*!TODO: Implement it!*/
+    }
+
 /* Mobile Responsive */
 @media (max-width: 768px) {
     .filter-search-container {
