Implemented logic to dynamically highlight the active navbar link based on the current route.

--- a/OnlineCoachingApp.Web/Views/Shared/_Layout.cshtml
+++ b/OnlineCoachingApp.Web/Views/Shared/_Layout.cshtml
@@ -20,6 +20,42 @@
 <body>
     <partial name="_NotificationsPartial"></partial>
     <header>
+        @*<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 custom-navbar">
+        <div class="container-fluid">
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span class="link-text">Online Coaching App</span></a>
+
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+        <ul class="navbar-nav flex-grow-1">
+        <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><span class="link-text">Home</span></a>
+        </li>
+
+        @if (this.User.Identity?.IsAuthenticated ?? false)
+        {
+        <a class="nav-link" asp-area="" asp-controller="TrainingProgram" asp-action="Add"><span class="link-text">Add</span></a>
+        }
+
+        <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="TrainingProgram" asp-action="All"><span class="link-text">Shop</span></a>
+        </li>
+
+        <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="link-text">About Us</span></a>
+        </li>
+
+        <li class="nav-item">
+        <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="link-text">Contact</span></a>
+        </li>
+        </ul>
+        <partial name="_LoginPartial" />
+        </div>
+        </div>
+        </nav>*@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 custom-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span class="link-text">Online Coaching App</span></a>
@@ -32,30 +68,49 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><span class="link-text">Home</span></a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["action"]?.ToString() == "Index" ? "active" : "")"
+                               asp-area="" asp-controller="Home" asp-action="Index">
+                                <span class="link-text">Home</span>
+                            </a>
                         </li>
 
                         @if (this.User.Identity?.IsAuthenticated ?? false)
                         {
-                            <a class="nav-link" asp-area="" asp-controller="TrainingProgram" asp-action="Add"><span class="link-text">Add</span></a>
+                            <li class="nav-item">
+                                <a class="nav-link @(ViewContext.RouteData.Values["action"]?.ToString() == "Add" ? "active" : "")"
+                                   asp-area="" asp-controller="TrainingProgram" asp-action="Add">
+                                    <span class="link-text">Add</span>
+                                </a>
+                            </li>
                         }
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="TrainingProgram" asp-action="All"><span class="link-text">Shop</span></a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["action"]?.ToString() == "All" ? "active" : "")"
+                               asp-area="" asp-controller="TrainingProgram" asp-action="All">
+                                <span class="link-text">Shop</span>
+                            </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="link-text">About Us</span></a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["action"]?.ToString() == "AboutUs" ? "active" : "")"
+                               asp-area="" asp-controller="Home" asp-action="AboutUs">
+                                <span class="link-text">About Us</span>
+                            </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="link-text">Contact</span></a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["action"]?.ToString() == "Contact" ? "active" : "")"
+                               asp-area="" asp-controller="Home" asp-action="Contact">
+                                <span class="link-text">Contact</span>
+                            </a>
                         </li>
                     </ul>
+
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
