--- a/OnlineCoachingApp.Web/Views/Shared/_Layout.cshtml.css
+++ b/OnlineCoachingApp.Web/Views/Shared/_Layout.cshtml.css
@@ -74,3 +74,7 @@ button.accept-policy {
     .link-text:hover {
         color: #ffce00;
     }
+
+.nav-link.active .link-text {
+    color: #ffce00 !important;
+}
